--- a/infra/scripts/data_scripts/requirements.txt
+++ b/infra/scripts/data_scripts/requirements.txt
@@ -1,3 +1,16 @@
-psycopg2-binary==2.9.10
-azure-identity==1.19.0
-azure-keyvault-secrets==4.9.0
+#
+#psycopg2-binary==2.9.10
+#azure-identity==1.19.0
+#azure-keyvault-secrets==4.9.0
+#urllib3==2.3.0
+#numpy==2.2.3
+#openpyxl==3.1.5
+#pandas==2.2.3
+#
+psycopg2-binary
+azure-identity
+azure-keyvault-secrets
+urllib3
+numpy
+openpyxl
+pandas
