--- a/infra/scripts/data_scripts/requirements.txt
+++ b/infra/scripts/data_scripts/requirements.txt
@@ -1,16 +1,9 @@
-#
-#psycopg2-binary==2.9.10
-#azure-identity==1.19.0
-#azure-keyvault-secrets==4.9.0
-#urllib3==2.3.0
-#numpy==2.2.3
-#openpyxl==3.1.5
-#pandas==2.2.3
-#
-psycopg2-binary
-azure-identity
-azure-keyvault-secrets
-urllib3
-numpy
-openpyxl
-pandas
+psycopg2-binary==2.9.10
+azure-identity==1.7.0
+azure-keyvault-secrets==4.3.0
+urllib3==1.26.7
+numpy==1.21.2
+openpyxl==3.0.7
+pandas==1.3.3
+msal[broker]==1.24.0b1
+msal-extensions==1.0.0
