--- a/infra/scripts/data_scripts/requirements.txt
+++ b/infra/scripts/data_scripts/requirements.txt
@@ -3,5 +3,6 @@ azure-identity==1.7.0
 azure-keyvault-secrets==4.3.0
 openpyxl==3.0.7
 pandas==1.3.3
+numpy==1.21.2
 msal[broker]==1.24.0b1
 msal-extensions==1.0.0
