--- a/infra/scripts/data_scripts/requirements_load_tables.txt
+++ b/infra/scripts/data_scripts/requirements_load_tables.txt
@@ -1,7 +1,5 @@
+#requirements for run_psql_load_tables.py
 psycopg2-binary==2.9.10
 azure-identity==1.7.0
 azure-keyvault-secrets==4.3.0
-openpyxl==3.0.7
 pandas==1.3.3
-msal[broker]==1.24.0b1
-msal-extensions==1.0.0
