--- a/infra/scripts/data_scripts/requirements_load_tables.txt
+++ b/infra/scripts/data_scripts/requirements_load_tables.txt
@@ -2,4 +2,5 @@
 psycopg2-binary==2.9.10
 azure-identity==1.7.0
 azure-keyvault-secrets==4.3.0
-pandas==1.3.3
+# other panas versions: 1.05, 1.2.5, 1.2.5 
+pandas==1.1.5 
