--- a/infra/scripts/data_scripts/requirements_load_tables.txt
+++ b/infra/scripts/data_scripts/requirements_load_tables.txt
@@ -3,5 +3,5 @@ psycopg2-binary==2.9.10
 azure-identity==1.7.0
 azure-keyvault-secrets==4.3.0
 # panas versions: 1.05, 1.2.5, 1.2.5 
-pandas==1.0.5
+#pandas==1.0.5
 
