tested successfully locally

--- a/infra/scripts/data_scripts/requirements_load_tables.txt
+++ b/infra/scripts/data_scripts/requirements_load_tables.txt
@@ -1,4 +1,5 @@
-#required for run_psql_create_tables_script.py only
 psycopg2-binary==2.9.10
 azure-identity==1.19.0
-pandas==1.5.1
+azure-keyvault-secrets==4.7.0
+pandas==2.2.2 #1.5.3 with numpy 2.2.4 not worked with python code
+#numpy==2.2.4 # automatically installed by pandas 2.2.2
