--- a/infra/scripts/data_scripts/requirements_create_tables.txt
+++ b/infra/scripts/data_scripts/requirements_create_tables.txt
@@ -1,4 +1,4 @@
-#required for run_psql_create_tables_script.py only
+#required for create psql tables python program
 psycopg2-binary==2.9.10
 azure-identity==1.19.0
 azure-keyvault-secrets==4.7.0
