--- a/infra/scripts/data_scripts/requirements_create_tables.txt
+++ b/infra/scripts/data_scripts/requirements_create_tables.txt
@@ -3,4 +3,4 @@ psycopg2-binary==2.9.10
 psycopg2-binary==2.9.10
 azure-identity==1.12.0  # Downgraded to ensure compatibility frpm 1.19.0
 msal==1.24.0b1
-msal-extensions==1.0.0b1
+msal-extensions==1.0.0
