--- a/infra/scripts/data_scripts/requirements_load_tables.txt
+++ b/infra/scripts/data_scripts/requirements_load_tables.txt
@@ -1,5 +1,4 @@
-psycopg2-binary==2.9.10
-azure-identity==1.19.0
-azure-keyvault-secrets==4.7.0
-pandas==2.2.2 #1.5.3 with numpy 2.2.4 not worked with python code
-#numpy==2.2.4 # automatically installed by pandas 2.2.2
+azure-identity==1.12.0  # For DefaultAzureCredential to acquire access tokens
+psycopg2-binary==2.9.6  # For connecting to PostgreSQL
+pandas==2.1.0           # For reading and processing CSV files. Other versions: 2.2.2, 1.5.3
+
